# ufo-glyphdata-manager

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  tox.ini
glyphdata_manager/: __main__.py
src/ufo_glyphdata_manager/: __init__.py  __main__.py
tests/: test_glyphdata_manager.py
