[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ufo-glyphdata-manager"
description = "Extract and apply global glyph data of UFOs to and from a CSV file."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Nikolaus Waxweiler", email = "nikolaus.waxweiler@daltonmaag.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "ufoLib2>=0.13"
]
dynamic = ["version"]

[project.scripts]
ufo-glyphdata-manager = "ufo_glyphdata_manager.__main__:main"

# [project.urls]
# Documentation = "https://github.com/unknown/ufo_glyphdata_manager#readme"
# Issues = "https://github.com/unknown/ufo_glyphdata_manager/issues"
# Source = "https://github.com/unknown/ufo_glyphdata_manager"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "black",
    "isort",
    "mypy",
    "pylint",
    "pytest-cov",
    "pytest",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=ufo_glyphdata_manager --cov=tests"
no-cov = "cov --no-cov"
lint = [
    "black --check --diff src tests",
    "isort --check-only --diff src tests",
    "mypy src tests",
    "pylint src tests",
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

# https://black.readthedocs.io/en/stable/pyproject_toml.html#pyproject-toml
[tool.black]
target-version = ["py38"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
[tool.isort]
profile = "black"

# https://code.visualstudio.com/docs/python/linting#_default-pylint-rules
[tool.pylint.messages_control]
disable = "all"
enable = [
    "F",
    "E",
    "unreachable",
    "duplicate-key",
    "unnecessary-semicolon",
    "global-variable-not-assigned",
    "unused-variable",
    "binary-op-exception",
    "bad-format-string",
    "anomalous-backslash-in-string",
    "bad-open-mode",
    "unused-import"
]

[tool.pylint.format]
max-line-length = "88"
